<resources>
    <string name="app_name">todolist_kotlin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splash_description"><![CDATA[by Daniel&laetitia]]></string>
    <string name="splash_about">Denna app gjort för kotlin app test för my.se skolan vi hoppas att ni gillar den. lorem fksjdhfkshkhfks kjfhkas hk asdfjks dfhkads hsdkfhkjasd</string>
    <string name="start">Start</string>
    <string name="list_name">List name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="list_created_successfully">List is created successfully</string>
    <string name="item_name">Item name</string>
    <string name="item_created_successfully">Item created successfully</string>
    <string name="blank_list_name_error">List name can\'t be empty</string>
    <string name="blank_item_name_error">Item name can\'t be empty</string>
    <string name="reset">Reset</string>
    <string name="create_item">Create Item</string>
    <string name="create_list">Create List</string>
    <string name="items">Items</string>
    <string name="home">Home</string>
</resources>